--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "cloudinary": "^2.7.0",
     "fast-average-color": "^9.5.0",
     "next": "15.5.3",
+    "pannellum": "^2.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
