--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.9",
     "@supabase/supabase-js": "^2.58.0",
     "cloudinary": "^2.7.0",
     "fast-average-color": "^9.5.0",
+    "gsap": "^3.13.0",
     "next": "15.5.3",
     "pannellum": "^2.5.6",
     "react": "19.1.0",
